# qr_nav

./: .gitignore  readme.MD
src/: april_tag_detector.py  aruco_tag_detection.py  qr_tag_detection.py
src/marker_logger/: package.xml  setup.cfg  setup.py
src/marker_logger/marker_logger/: marker_logger.py  plot_log.py
src/qr_logger/: package.xml  setup.cfg  setup.py
src/qr_logger/launch/: detect_apriltags.launch.py
src/qr_logger/qr_logger/: log_node.py
src/qr_nav_ros2/: package.xml  setup.cfg  setup.py
src/qr_nav_ros2/launch/: tag_and_logger.launch.py
src/qr_nav_ros2/logs/: tag_detections_20250508_025135.csv  tag_detections_20250508_031130.csv  tag_detections_20250508_031352.csv  tag_detections_20250626_212050.csv  tag_detections_20250626_213352.csv
src/qr_nav_ros2/qr_nav_ros2/: tag_detector.py
src/qr_nav_ros2/rviz/: qr_nav_testing.rviz
