<?xml version="1.0"?>
<package format="3">
  <name>marker_logger</name>
  <version>0.1.0</version>
  <description>CSV Logging and offline analysis of marker codes</description>

  <maintainer email="evelynplesca@gmail.com">Evelyn</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf-transformations</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

